--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-ALCHEMY_API_KEY_RINKEBY=""
+ALCHEMY_API_KEY_URL=""
 CONTRACT_ADDRESS=""
+ETHERSCAN_API_ENDPOINT="https://api-rinkeby.etherscan.io/api"
 ETHERSCAN_API_KEY=""
 TREASURY_WALLET=""
