adds support for BSC

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ CONTRACT_ADDRESS=""
 ETHERSCAN_API_ENDPOINT="https://api-rinkeby.etherscan.io/api"
 ETHERSCAN_API_KEY=""
 TREASURY_WALLET=""
+FROM_BLOCK=""
